[tool.poetry]
name = "ultraviolet"
version = "0.1.0"
description = "The Ultraviolet Programming Language"
authors = ["Mark Joshwel <mark@joshwel.re>"]
license = "MPLv2"
readme = "README.md"
include = ["LICENCE"]
packages = [
    { include = "ultraviolet", from = "src" },
]

[tool.poetry.scripts]
uv = "ultraviolet:entry"
ultraviolet = "ultraviolet:entry"

[tool.poetry.dependencies]
python = "^3.10"
parsimonious = "^0.9.0"
llvmlite = "^0.39.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.971"
types-parsimonious = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
